# pdf-text-extractor

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yml
cmake/: PDFDocumentView.cmake  Packaging.cmake
docs/: README.md  cli-reference.md  daily-log-2026-04-30.md  daily-log-2026-05-01.md  daily-log-2026-05-02.md  daily-log-2026-05-03.md  decision-log.md  detailed-design.md  enrichment-sidecar-schema.md  extractor-output-contract-concept.md  feature-function-ideation-notes.md  high-level-architecture.md  ideation-risk-experiment-2026-04-30.md  ideation-risk-exploration-plan.md  ideation-stabilization-summary.md  integration-tutorial.md  ocr-engine-evaluation-notes.md  packaging-plan.md  pdf-enrichment-requirements-draft.md  pdf-text-extractor-ideation.md  pdf-text-extractor-mockup-review.md  phase-gate-record.md  requirements-traceability-matrix.md  reusable-volume-packaging-concept.md  shell-user-guide.md  software-requirements-specification.md  static-pdf-browser-indexer-concept.md  tesseract-psm-ideation-notes.md  test-plan.md  ui-shell.md
docs/adrs/: 0001-layered-native-architecture.md  0002-work-folder-artifact-contract.md  0003-ocr-probabilistic-boundary.md  0004-presentation-qt-qml-baseline.md  0005-pdf-inspection-poppler-family.md  0006-pdf-enrichment-derived-output.md  README.md
examples/demo_app/: CMakeLists.txt  main.cpp
scripts/: enrich_lint_manifest.sh  pdf_enrich_apply.py
scripts/experiments/: compare-ocr-to-ground-truth.js  compare-tesseract-psm.js
src/cli/: bootstrap_main.cpp  enrich_main.cpp
src/core/: artifact_cleanup.cpp  artifact_cleanup.hpp  candidate_generation_poppler.cpp  candidate_generation_poppler.hpp  candidate_text.cpp  candidate_text.hpp  dependency_capability.cpp  dependency_capability.hpp  file_change_detector.cpp  file_change_detector.hpp  file_digest.cpp  file_digest.hpp  json.cpp  json.hpp  link_map_store.cpp  link_map_store.hpp  local_path_intent.cpp  local_path_intent.hpp  ocr_routing.cpp  ocr_routing.hpp  output_config.cpp  output_config.hpp  page_id.cpp  page_id.hpp  page_quality.cpp  page_quality.hpp  page_review_sync.cpp  page_review_sync.hpp  pdf_enrichment.cpp  pdf_enrichment.hpp  pdf_inspection_poppler.cpp  pdf_inspection_poppler.hpp  poppler_embedded_text.cpp  poppler_embedded_text.hpp  poppler_page_render.cpp  poppler_page_render.hpp  process_runner.cpp  process_runner.hpp  readiness_summary.cpp  readiness_summary.hpp  (+28 more)
src/ui/: CMakeLists.txt  app_theme.cpp  app_theme.hpp  link_map_editor_dialog.cpp  link_map_editor_dialog.hpp  main.cpp  review_session_facade.cpp  review_session_facade.hpp  shell_main_window.cpp  shell_main_window.hpp  volume_metadata_dialog.cpp  volume_metadata_dialog.hpp
tests/: core_tests.cpp  tc_fr028_probe.cpp
tests/fixtures/enrichment/: link-map.json  lint.manifest.tsv  outline-map.json
tools/wbs-dashboard/: README.md  index.html  package-lock.json  package.json
tools/wbs-dashboard/public/: rtm-summary.json  wbs-data.json
tools/wbs-dashboard/src/: App.module.css  App.tsx  types.ts  wbsUtils.ts
tools/wbs-dashboard/src/components/: FiltersBar.module.css  FiltersBar.tsx  RtmPanel.module.css  RtmPanel.tsx  SummaryCards.module.css  SummaryCards.tsx  WbsTree.module.css  WbsTree.tsx
